versions/v2.9/modules/en/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc
= 1. Configuring Microsoft AD FS for {rancher-product-name}
:page-languages: [en, zh]
:revdate: 2025-03-03
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/configure-microsoft-ad-federation-service-saml/configure-ms-adfs-for-rancher 
:product-path: rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher

Before you configure Rancher to support Active Directory Federation Service (AD FS), you must add Rancher as a https://docs.microsoft.com/en-us/windows-server/identity/ad-fs/technical-reference/understanding-key-ad-fs-concepts[relying party trust] in AD FS.

. Log into your AD server as an administrative user.
. Open the *AD FS Management* console. Select *Add Relying Party Trust..*. from the *Actions* menu and click *Start*.
+
image::adfs/adfs-overview.png[]

. Select *Enter data about the relying party manually* as the option for obtaining data about the relying party.
+
image::adfs/adfs-add-rpt-2.png[]

. Enter your desired *Display name* for your Relying Party Trust. For example, `Rancher`.
+
image::adfs/adfs-add-rpt-3.png[]

. Select *AD FS profile* as the configuration profile for your relying party trust.
+
image::adfs/adfs-add-rpt-4.png[]

. Leave the *optional token encryption certificate* empty, as Rancher AD FS will not be using one.
+
image::adfs/adfs-add-rpt-5.png[]

. Select *Enable support for the SAML 2.0 WebSSO protocol*
  and enter `\https://<rancher-server>/v1-saml/adfs/saml/acs` for the service URL.
+
image::adfs/adfs-add-rpt-6.png[]

. Add `\https://<rancher-server>/v1-saml/adfs/saml/metadata` as the *Relying party trust identifier*.
+
image::adfs/adfs-add-rpt-7.png[]

. This tutorial will not cover multi-factor authentication; please refer to the https://docs.microsoft.com/en-us/windows-server/identity/ad-fs/operations/configure-additional-authentication-methods-for-ad-fs[Microsoft documentation] if you would like to configure multi-factor authentication.
+
image::adfs/adfs-add-rpt-8.png[]

. From *Choose Issuance Authorization RUles*, you may select either of the options available according to use case. However, for the purposes of this guide, select *Permit all users to access this relying party*.
+
image::adfs/adfs-add-rpt-9.png[]

. After reviewing your settings, select *Next* to add the relying party trust.
+
image::adfs/adfs-add-rpt-10.png[]

. Select *Open the Edit Claim Rules..*. and click *Close*.
+
image::adfs/adfs-add-rpt-11.png[]

. On the *Issuance Transform Rules* tab, click *Add Rule..*..
+
image::adfs/adfs-edit-cr.png[]

. Select *Send LDAP Attributes as Claims* as the *Claim rule template*.
+
image::adfs/adfs-add-tcr-1.png[]

. Set the *Claim rule name* to your desired name (for example, `Rancher Attributes`) and select *Active Directory* as the *Attribute store*. Create the following mapping to reflect the table below:
+
|===
| LDAP Attribute
| Outgoing Claim Type

| Given-Name
| Given Name

| User-Principal-Name
| UPN

| Token-Groups - Qualified by Long Domain Name
| Group

| SAM-Account-Name
| Name
|===
+
image::adfs/adfs-add-tcr-2.png[]

. Download the `federationmetadata.xml` from your AD server at:
+
----
https://<AD_SERVER>/federationmetadata/2007-06/federationmetadata.xml
----

*Result:* You've added Rancher as a relying trust party. Now you can configure Rancher to leverage AD.

== xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/rancher-for-ms-adfs.adoc[Next: Configuring Rancher for Microsoft AD FS]
